--- a/about_me.html
+++ b/about_me.html
@@ -1,12 +1,11 @@
-<html lang="en">
+<!DOCTYPE html>
+<html>
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Me</title>
-       <link rel="stylesheet" href="style.css">
-
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="style2.css">
 </head>
 <body>
     <div class="topnav">
@@ -15,19 +14,27 @@
         <a href="about_me.html"><i class="fa fa-fw fa-user"></i>About ME</button></a>
         <a href="home.html"><i class="fa fa-fw fa-home"></i>Home</a>
     </div>
-    <div class="bghalf">
-        <div class="sectionleft">   <h2 >ABOUT ME</h2></div>
-   </div class="sectionright">
-   <img src="profile.jpg" height="45%" width="35%"/>
-   <p>I am Rakshith Reddy from Vasavi college of Engineering. I currently live in Hyderabad. I am friendly and social guy.
+
+    <div class="row">
+        <div class="column1" >
+          <h1 >ABOUT ME</h1>
+        </div>
+        <div class="column2" >
+            <img src="profile.jpg" width="500" height="400" >
+            <br>
+            <br>
+           <p> I am Rakshith Reddy from Vasavi college of Engineering. I currently live in Hyderabad. I am friendly and social guy.
     I am a decent cricket and TT player. 
        I like to watch movies and play games in my free time.</p>
-     <hr > 
-    <div >
-        <form action="contact_me.html">
-            <button class="btn">CONTACT INFO</button>
-        </form>
-    </div> 
-    </div>
+            <br>
+       <hr>
+
+        </div>
+      </div>
+
+
+
+
+ 
 </body>
 </html>
