--- a/gallery.html
+++ b/gallery.html
@@ -27,16 +27,16 @@
         <div class="container">
             <div class="gallery">
                 <figure class="gallery__item gallery__item--1">
-                    <img src="img_1.jpg" alt="Gallery image 1" class="gallery__img">
+                    <img src="img_1.jpg"  alt="Gallery image 1" class="gallery__img "style="max-width:100%;max-height:100%;">
                 </figure>
                 <figure class="gallery__item gallery__item--2">
-                    <img src="img_2.jpg" alt="Gallery image 2" class="gallery__img">
+                    <img src="img_2.jpg" alt="Gallery image 2" class="gallery__img" style="max-width:100%;max-height:100%;">
                 </figure>
                 <figure class="gallery__item gallery__item--3">
-                    <img src="img_4.jpg" alt="Gallery image 3" class="gallery__img">
+                    <img src="img_4.jpg" alt="Gallery image 3" class="gallery__img" style="max-width:100%;max-height:100%;">
                 </figure>
                 <figure class="gallery__item gallery__item--4">
-                    <img src="img_3.jpg" alt="Gallery image 4" class="gallery__img">
+                    <img src="img_3.jpg" alt="Gallery image 4" class="gallery__img" style="max-width:100%;max-height:100%;">
                 </figure>
             </div>
         </div>
