--- a/contact_me.html
+++ b/contact_me.html
@@ -21,6 +21,17 @@
 
 
 </head>
+<script>
+function validate()
+{
+  var name=document.forms["myForm"]["fname"].value;
+  if(name.length<1)
+  {
+    document.getElementById("nameloc").innerHTML="Enter your name";
+    return false;
+  }
+}
+</script>
 <body>
     <div class="topnav">
         <a href="gallery.html"><i class="fa fa-fw fa-image"></i>Gallery</a>
@@ -54,17 +65,18 @@
         <h2 >FILL THIS FORM FOR ANY QUERIES</h2>
         <br>
         
-        <form name="myForm" action="home.html" >
+        <form name="myForm" action="home.html" onsubmit="return validate()" >
 
             <label for="fname">First Name</label>
-            <input type="text" id="fname" name="firstname" placeholder="Your name..">
+            <input type="text" id="fname" name="firstname" placeholder="Your name.." required>
+            
             <label for="lname">Last Name</label>
-            <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+            <input type="text" id="lname" name="lastname" placeholder="Your last name.." required>
             <label for="email">Email Address</label>
-            <input type="text" id="email" name="emailId" placeholder="Your email ID..">
+            <input type="text" id="email" name="emailId" placeholder="Your email ID.." required>
             <label for="subject">Subject</label>
             <textarea id="subject" name="subject" placeholder="Write something.." style="height:170px"></textarea>
-            <input type="submit" value="Submit">
+            <input type="submit" value="Submit" onclick="validate()">
           </form>
     </div>
 
