--- a/gallery.html
+++ b/gallery.html
@@ -1,45 +1,44 @@
-<!DOCTYPE html>
-<html lang="en">
+
+<html>
     <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
-        <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,400i|Nunito:300,300i" rel="stylesheet">
-        <link rel="stylesheet" href="css/style.css">
-        <link rel="shortcut icon" type="image/png" href="img/favicon.png">
-        <link rel="stylesheet" href="style.css">
-
+        <title>Gallary</title>
+    
+    </head>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
- 
-        <title>CSS Grids Gallery</title>
-    </head>
-    <body>
-        <div class="topnav">
-            <a href="gallery.html"><i class="fa fa-fw fa-image"></i>Gallery</a>
-            <a href="contact_me.html" >    <i class="fa fa-fw fa-envelope"></i>Contact ME</a>
-            <a href="about_me.html"><i class="fa fa-fw fa-user"></i>About ME</button></a>
-            <a href="home.html"><i class="fa fa-fw fa-home"></i>Home</a>
-        </div>
-        <div class="bgblack">
+<link rel="stylesheet" href="style.css">
+<script>
 
-        <div class="container">
-            <div class="gallery">
-                <figure class="gallery__item gallery__item--1">
-                    <img src="img_1.jpg"  alt="Gallery image 1" class="gallery__img "style="max-width:100%;max-height:100%;">
-                </figure>
-                <figure class="gallery__item gallery__item--2">
-                    <img src="img_2.jpg" alt="Gallery image 2" class="gallery__img" style="max-width:100%;max-height:100%;">
-                </figure>
-                <figure class="gallery__item gallery__item--3">
-                    <img src="img_4.jpg" alt="Gallery image 3" class="gallery__img" style="max-width:100%;max-height:100%;">
-                </figure>
-                <figure class="gallery__item gallery__item--4">
-                    <img src="img_3.jpg" alt="Gallery image 4" class="gallery__img" style="max-width:100%;max-height:100%;">
-                </figure>
-            </div>
-        </div>
+var data = {
+  "images": [{
+    "img1": "img_1.jpg"
+  }]
+};
+data.images.forEach( function(obj) {
+  var img = new Image();
+  img.src = obj.img1;
+  img.setAttribute("class", "gallery");
+  
+  document.getElementById("img_container").appendChild(img);
+});
+</script>
+<body>
+
+  <div class="topnav">
+    <a href="gallery.html"><i class="fa fa-fw fa-image"></i>Gallery</a>
+    <a href="contact_me.html" >    <i class="fa fa-fw fa-envelope"></i>Contact ME</a>
+    <a href="about_me.html"><i class="fa fa-fw fa-user"></i>About ME</button></a>
+    <a href="home.html"><i class="fa fa-fw fa-home"></i>Home</a>
+</div>
+        <br><br>
+
+        <h1 class="jumbotron title_header">My Gallery</h1>
+        <div id="img_container">
+        <img class="gallery" src="img_1.jpg" >
+        <img class="gallery" src="img_2.jpg" >
+        <img class="gallery" src="img_3.jpg ">
+        <img class="gallery" src="img_4.jpg">
+        
     </div>
-    </body>
+</body>
 </html>
